@@ -255,9 +255,12 @@ that use Sphinx' HTMLWriter class.
 
 .. confval:: html_use_opensearch
 
-   If true, an `OpenSearch <http://opensearch.org>` description file will be
-   output, and all pages will contain a ``<link>`` tag referring to it.
-   The default is ``False``.
+   If nonempty, an `OpenSearch <http://opensearch.org>` description file will be
+   output, and all pages will contain a ``<link>`` tag referring to it.  Since
+   OpenSearch doesn't support relative URLs for its search page location, the
+   value of this option must be the base URL from which these documents are
+   served (without trailing slash), e.g. ``"http://docs.python.org"``.  The
+   default is ``''``.
 
 .. confval:: html_translator_class
 
